include/rsvg.h


typedef enum {
    RSVG_ERROR_FAILED
} RsvgError;
RSVG_API
GQuark rsvg_error_quark (void) G_GNUC_CONST;
RSVG_API
GType rsvg_error_get_type (void);
RSVG_API
GType rsvg_handle_get_type (void);
typedef struct _RsvgHandle RsvgHandle;
typedef struct _RsvgHandleClass RsvgHandleClass;
typedef struct _RsvgDimensionData RsvgDimensionData;
typedef struct _RsvgPositionData RsvgPositionData;
typedef struct _RsvgRectangle RsvgRectangle;
struct _RsvgHandleClass {
    GObjectClass parent;
    gpointer _abi_padding[15];
};
struct _RsvgHandle {
    GObject parent;
    gpointer _abi_padding[16];
};
struct _RsvgDimensionData {
    int width;
    int height;
    gdouble em;
    gdouble ex;
};
struct _RsvgPositionData {
    int x;
    int y;
};
struct _RsvgRectangle {
    double x;
    double y;
    double width;
    double height;
};
RSVG_API
void rsvg_handle_set_dpi (RsvgHandle *handle, double dpi);
RSVG_API
void rsvg_handle_set_dpi_x_y (RsvgHandle *handle, double dpi_x, double dpi_y);
RSVG_API
RsvgHandle *rsvg_handle_new (void);
RSVG_DEPRECATED_FOR(rsvg_handle_read_stream_sync)
gboolean rsvg_handle_write (RsvgHandle   *handle,
                            const guchar *buf,
                            gsize         count,
                            GError      **error);
RSVG_DEPRECATED_FOR(rsvg_handle_read_stream_sync)
gboolean rsvg_handle_close (RsvgHandle *handle, GError **error);
RSVG_API
GdkPixbuf *rsvg_handle_get_pixbuf (RsvgHandle *handle);
RSVG_API
GdkPixbuf *rsvg_handle_get_pixbuf_sub (RsvgHandle *handle, const char *id);
RSVG_API
const char *rsvg_handle_get_base_uri (RsvgHandle *handle);
RSVG_API
void rsvg_handle_set_base_uri (RsvgHandle *handle, const char *base_uri);
RSVG_API
void rsvg_handle_get_dimensions (RsvgHandle *handle, RsvgDimensionData *dimension_data);
RSVG_DEPRECATED_FOR(rsvg_handle_get_geometry_for_layer)
gboolean rsvg_handle_get_dimensions_sub (RsvgHandle        *handle,
                                         RsvgDimensionData *dimension_data,
                                         const char        *id);
RSVG_DEPRECATED_FOR(rsvg_handle_get_geometry_for_layer)
gboolean rsvg_handle_get_position_sub (RsvgHandle       *handle,
                                       RsvgPositionData *position_data,
                                       const char       *id);
RSVG_API
gboolean rsvg_handle_has_sub (RsvgHandle *handle, const char *id);
typedef enum {
    RSVG_UNIT_PERCENT,
    RSVG_UNIT_PX,
    RSVG_UNIT_EM,
    RSVG_UNIT_EX,
    RSVG_UNIT_IN,
    RSVG_UNIT_CM,
    RSVG_UNIT_MM,
    RSVG_UNIT_PT,
    RSVG_UNIT_PC
} RsvgUnit;
typedef struct {
    double   length;
    RsvgUnit unit;
} RsvgLength;
RSVG_API
void rsvg_handle_get_intrinsic_dimensions (RsvgHandle *handle,
                                           gboolean   *out_has_width,
                                           RsvgLength *out_width,
                                           gboolean   *out_has_height,
                                           RsvgLength *out_height,
                                           gboolean   *out_has_viewbox,
                                           RsvgRectangle *out_viewbox);
RSVG_API
gboolean rsvg_handle_get_intrinsic_size_in_pixels (RsvgHandle *handle,
                                                   gdouble    *out_width,
                                                   gdouble    *out_height);
typedef enum 
{
    RSVG_HANDLE_FLAGS_NONE           = 0,
    RSVG_HANDLE_FLAG_UNLIMITED       = 1 << 0,
    RSVG_HANDLE_FLAG_KEEP_IMAGE_DATA = 1 << 1
} RsvgHandleFlags;
RSVG_API
GType rsvg_handle_flags_get_type (void);
RSVG_API
RsvgHandle *rsvg_handle_new_with_flags (RsvgHandleFlags flags);
RSVG_API
void rsvg_handle_set_base_gfile (RsvgHandle *handle,
                                 GFile      *base_file);
RSVG_API
gboolean rsvg_handle_read_stream_sync (RsvgHandle   *handle,
                                       GInputStream *stream,
                                       GCancellable *cancellable,
                                       GError      **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_gfile_sync (GFile          *file,
                                             RsvgHandleFlags flags,
                                             GCancellable   *cancellable,
                                             GError        **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_stream_sync (GInputStream   *input_stream,
                                              GFile          *base_file,
                                              RsvgHandleFlags flags,
                                              GCancellable   *cancellable,
                                              GError        **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_data (const guint8 *data, gsize data_len, GError **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_file (const gchar *filename, GError **error);
RSVG_API
gboolean rsvg_handle_set_stylesheet (RsvgHandle   *handle,
                                     const guint8 *css,
                                     gsize         css_len,
                                     GError      **error);
RSVG_API
void rsvg_handle_internal_set_testing (RsvgHandle *handle, gboolean testing);
RSVG_DEPRECATED_FOR(g_object_unref)
void rsvg_handle_free (RsvgHandle *handle);
typedef void (*RsvgSizeFunc) (gint * width, gint * height, gpointer user_data);
RSVG_DEPRECATED
void rsvg_handle_set_size_callback (RsvgHandle    *handle,
                                    RsvgSizeFunc   size_func,
                                    gpointer       user_data,
                                    GDestroyNotify user_data_destroy);
RSVG_DEPRECATED
const char *rsvg_handle_get_title (RsvgHandle *handle);
RSVG_DEPRECATED
const char *rsvg_handle_get_desc (RsvgHandle *handle);
RSVG_DEPRECATED
const char *rsvg_handle_get_metadata (RsvgHandle *handle);